added jwt decorator providing swagger doc and validation
