# app/api/controllers/auth_controller.py
@@ -4,6 +4,7 @@ from flask_restplus import Resource
 
 from ..models import AuthDto
 from ..services import login_user, logout_user
+from ..decorators import expect_jwt
 
 api = AuthDto.api
 user_auth = AuthDto.user_auth
@@ -14,6 +15,8 @@ class UserLogin(Resource):
     """User Login Resource"""
 
     @api.doc("user login")
+    @api.response(200, "Successfully logged in")
+    @api.response(401, "Email or password do not match")
     @api.expect(user_auth, validate=True)
     def post(self) -> Dict[str, str]:
         """Logs a user in"""
@@ -29,10 +32,12 @@ class LogoutAPI(Resource):
     """Logout Resource"""
 
     @api.doc("logout a user")
+    @api.response(200, "Successfully logged out")
+    @api.response(401, "There was an error logging out")
+    @expect_jwt(api, "Provide a valid auth token")
     def post(self) -> Dict[str, str]:
         """Logs a user out"""
 
-        auth_header = request.headers.get("Authorization")
-        logout_user(auth_header)
+        logout_user()
 
         return {"message": "Successfully logged out"}
